--- a/css/global/estilos.css
+++ b/css/global/estilos.css
@@ -12,3 +12,34 @@
     margin-left: 8px;
     margin-right: 8px;
 }
+
+.mt-30{
+    margin-top: 60px;
+}
+.mb-30{
+    margin-bottom: 60px;
+}
+.my-30{
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+.mx-30{
+    margin-left: 60px;
+    margin-right: 60px;
+}
+.d-flex {
+    display: flex;
+
+}
+.gap-10{
+    gap: 10px;
+}
+.justify-center{
+    justify-content: center;
+}
+.justify-between{
+    justify-content: space-between;
+}
+.items-baseline{
+    align-items: baseline;
+}
