--- a/css/global/estilos.css
+++ b/css/global/estilos.css
@@ -34,6 +34,9 @@
 .gap-10{
     gap: 10px;
 }
+.items-center{
+    justify-items: center;
+}
 .justify-center{
     justify-content: center;
 }
@@ -42,4 +45,18 @@
 }
 .items-baseline{
     align-items: baseline;
+}
+
+.text-sm{
+    font-size: 10px;
+}
+
+.text-md{
+    font-size: 14px;
+}
+.text-lg{
+    font-size: 18px;
+}
+.text-xl{
+    font-size: 24px;
 }
