--- a/css/global/estilos.css
+++ b/css/global/estilos.css
@@ -1,62 +1,80 @@
-.mt-4{
+.mt-4 {
     margin-top: 8px;
 }
-.mb-4{
+
+.mb-4 {
     margin-bottom: 8px;
 }
-.my-4{
+
+.my-4 {
     margin-top: 8px;
     margin-bottom: 8px;
 }
-.mx-4{
+
+.mx-4 {
     margin-left: 8px;
     margin-right: 8px;
 }
 
-.mt-30{
+.mt-30 {
     margin-top: 60px;
 }
-.mb-30{
+
+.mb-30 {
     margin-bottom: 60px;
 }
-.my-30{
+
+.my-30 {
     margin-top: 60px;
     margin-bottom: 60px;
 }
-.mx-30{
+
+.mx-30 {
     margin-left: 60px;
     margin-right: 60px;
 }
+
 .d-flex {
     display: flex;
 
 }
-.gap-10{
+
+.p-0 {
+    padding: 0;
+}
+
+.gap-10 {
     gap: 10px;
 }
-.items-center{
+
+.items-center {
     justify-items: center;
 }
-.justify-center{
+
+.justify-center {
     justify-content: center;
 }
-.justify-between{
+
+.justify-between {
     justify-content: space-between;
 }
-.items-baseline{
+
+.items-baseline {
     align-items: baseline;
 }
 
-.text-sm{
+.text-sm {
     font-size: 10px;
 }
 
-.text-md{
+.text-md {
     font-size: 14px;
 }
-.text-lg{
+
+.text-lg {
     font-size: 18px;
 }
-.text-xl{
+
+.text-xl {
     font-size: 24px;
 }
