--- a/css/global/estilos.css
+++ b/css/global/estilos.css
@@ -1,6 +1,12 @@
 .mt-4 {
     margin-top: 8px;
 }
+.mr-4{
+    margin-right: 8px;
+}
+.ml-4{
+    margin-left: 8px;
+}
 
 .mb-4 {
     margin-bottom: 8px;
